fix: select overlap

--- a/assets/scss/_community-content-filter.scss
+++ b/assets/scss/_community-content-filter.scss
@@ -20,6 +20,8 @@
     flex-grow: 1;
     @include media-breakpoint-down(xs) {
       width: 100%;
+      margin-top: 4%;
+      margin-bottom: 4%;
     }
   }
   &__selectors {
@@ -32,20 +34,23 @@
       width: 50%;
       @include media-breakpoint-down(xs) {
         width: 100%;
-        margin-bottom: 10px;
-        margin-top: 10px;
+        margin-bottom: 4px;
       }
     }
     &__label {
       padding-right: 2%;
       color: $secondary;
       font-weight: bold;
+      box-sizing: border-box;
     }
     &__input {
       width: 60%;
+      box-sizing: border-box;
       .custom-select {
         border: none;
         font-weight: bold;
+        height: 32px;
+        box-sizing: border-box;
       }
       @include media-breakpoint-down(xs) {
         width: auto;
